src/App.css
/* XS */
@media (min-width: 475px) {
  /* CSS rules for extra small screens */
}

/* sm */
@media (min-width: 640px) {
  /* CSS rules for small screens */
}

/* md */
@media (min-width: 768px) {
  /* CSS rules for medium screens */
}

/* lg */
@media (min-width: 1024px) {
  /* CSS rules for large screens */
}

/* xl */
@media (min-width: 1280px) {
  /* CSS rules for extra large screens */
}

/* 2xl */
@media (min-width: 1536px) {
  /* CSS rules for 2 extra large screens */
}
body {
  background-image: linear-gradient(to bottom, #232432, #191a24);
  color: white;
  margin: 0;
  display: flex;
  min-height: 100vh;
}
.row {
  display: flex;
  flex-direction: row;
}

.col {
  display: flex;
  flex-direction: column;
}
.full-screen {
  height: 100vh;
  width: 100vw;
  position: static;
  margin: 0;
}
.container {
  margin-top: 7rem;
  display: flex;
  flex-direction: column;
  justify-content: center;
  align-items: center;
}
.center {
  display: flex;
  justify-content: center; /* Center horizontally */
  align-items: center; /* Center vertically */
  height: 100vh; /* Full viewport height */
}
.container-movie-page {
  display: flex;
  justify-content: center; /* Center horizontally */
  align-items: center; /* Center vertically */
  padding-top: 10%;
}

.search-container {
  /* problem to AHHAHA di ko ma uupper right */
  align-items: center;
}
.seat {
  background-color: #d9d9d9;
  width: 2.5rem;
  height: 3rem;
  margin: 0.5rem;
  border-top-left-radius: 2.5rem;
  border-top-right-radius: 2.5rem;
}

.seatClicked {
  background-color: #50db00;
  width: 2.5rem;
  height: 3rem;
  margin: 0.5rem;
  border-top-left-radius: 2.5rem;
  border-top-right-radius: 2.5rem;
}

.seat:hover {
  background-color: #bdb88e;
}

.seatROW {
  display: flex;
}

.centered {
  text-align: center;
}

.img {
  width: 25%;
}

/* For Movies */

.movie-card {
  width: 60em;
  height: auto;
  padding: 10px;
  margin: auto;
  border: solid rgb(255, 255, 255);
  border-radius: 10px;
}
.col:first-child {
  flex-basis: 25%; /* Set the width of the first column to 25% */
}

.col:last-child {
  flex-basis: 75%; /* Set the width of the last column to 75% */
}

.movie-row {
  display: grid;
  grid-template-columns: auto auto auto;
}

.date-text {
  font-size: 35px;
  width: 20px;
  height: 40px;
  margin: auto;
  margin-bottom: 25px;
}

.movie-grid {
  display: grid;
  grid-template-columns: repeat(3, 1fr); /* 3 columns */
  gap: 20px;
  list-style: none;
  padding: 0;
  justify-content: center; /* Center the grid items horizontally */
}

.movie-item {
  border-radius: 8px;
  overflow: hidden;
  box-shadow: 10px 10px 18px 0px rgba(0, 0, 0, 0.74);
  transition: transform 0.3s ease; /* Add transition for smooth animation */
}

.movie-item:hover {
  transform: scale(1.1); /* Enlarge the item on hover */
}
.movie-content img {
  width: 100%; /* Set the width to 100% */
  height: auto; /* Allow the height to adjust automatically based on the aspect ratio */
  max-height: 350px; /* Set a maximum height for the images */
  object-fit: cover; /* Ensure the image covers the entire container */
}
.movie-content {
  display: flex;
  flex-direction: column;
}

.movie-details {
  flex: 1;
  padding: 10px;
  margin: 1.5%;
  background-color: #191a24;
}

.movie-details p {
  margin: 0;
  padding-bottom: 5px;
}
.movie-details h5 {
  font-weight: bold;
}
.movie-details form {
  margin-top: auto;
}
.movie-container {
  display: flex;
  justify-content: center; /* Center horizontally */
}
.dp-img {
  width: 100%; /* Set the width to 100% */
  height: 100%; /* Allow the height to adjust automatically based on the aspect ratio */
}
.display-movie-pic {
  width: 100%; /* Set the width to 100% */
  height: auto; /* Allow the height to adjust automatically based on the aspect ratio */
  object-fit: cover; /* Ensure the image covers the entire container */
}

select {
  width: 100%;
  padding: 0.5rem;
  border: 1px solid #ccc;
  border-radius: 5px;
  font-size: 16px;
}

.add-button {
  display: block;
  width: 100%;
  padding: 0.75rem;
  font-weight: 500;
  background-color: #1cb855;
  border: none;
  color: #fff;
  border-radius: 5px;
  cursor: pointer;
  font-size: 16px;
}

.add-button:hover {
  background-color: #1fdf64;
}

.del-button {
  display: block;
  width: 100%;
  padding: 0.75rem;
  font-weight: 500;
  background-color: #ff4d4d; /* Red color */
  border: none;
  color: #fff;
  border-radius: 5px;
  cursor: pointer;
  font-size: 16px;
}

.del-button:hover {
  background-color: #ff6666; /* Lighter shade of red on hover */
}
/* For navbar */

.navbar {
  position: fixed;
  top: 0;
  width: 100%;
  height: 100px;
  background-color: #232432;
  overflow: hidden;
  margin-bottom: 50px;
  padding: 10px;
  align-items: center;
  justify-content: space-between;
}

.button {
  margin-right: 10px;
  color: white;
  font-size: 20px;
  background-color: rgba(255, 255, 255, 0); /* Transparent background */
  border: none;
  transition: 0.2s;
}
.buttons {
  margin-right: 30px;
}

.button:hover {
  color: #00ea5d; /* Change text color on hover */
  text-shadow: 2px 2px 4px rgba(0, 234, 93, 0.5); /* Add shadow to text on hover */
}

